--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			f1.add(gui_content, 'NoiseFrequency', 0.0, 1.0);
 
 			var f2 = gui.addFolder('Fog shape');
-			f2.add(gui_content, 'Radius', 2.0, 20.0);
+			f2.add(gui_content, 'Radius', 0.1, 20.0);
 			f2.add(gui_content, 'FogOneOrTwo');
 
 			var f3 = gui.addFolder('Other');
@@ -301,85 +301,96 @@
 		}
 
 			
+	//
+	// Description : Array and textureless GLSL 2D/3D/4D simplex 
+	//               noise functions.
+	//      Author : Ian McEwan, Ashima Arts.
+	//  Maintainer : ijm
+	//     Lastmod : 20110822 (ijm)
+	//     License : Copyright (C) 2011 Ashima Arts. All rights reserved.
+	//               Distributed under the MIT License. See LICENSE file.
+	//               https://github.com/ashima/webgl-noise
+	// 
 
 		float snoise(vec3 v)
-		{
-			const vec2  C = vec2(1.0/6.0, 1.0/3.0) ;
-			const vec4  D = vec4(0.0, 0.5, 1.0, 2.0);
+		  { 
+		  const vec2  C = vec2(1.0/6.0, 1.0/3.0) ;
+		  const vec4  D = vec4(0.0, 0.5, 1.0, 2.0);
 
-			// First corner
-			vec3 i  = floor(v + dot(v, C.yyy) );
-			vec3 x0 =   v - i + dot(i, C.xxx) ;
+		// First corner
+		  vec3 i  = floor(v + dot(v, C.yyy) );
+		  vec3 x0 =   v - i + dot(i, C.xxx) ;
 
-			// Other corners
-			vec3 g = step(x0.yzx, x0.xyz);
-			vec3 l = 1.0 - g;
-			vec3 i1 = min( g.xyz, l.zxy );
-			vec3 i2 = max( g.xyz, l.zxy );
+		// Other corners
+		  vec3 g = step(x0.yzx, x0.xyz);
+		  vec3 l = 1.0 - g;
+		  vec3 i1 = min( g.xyz, l.zxy );
+		  vec3 i2 = max( g.xyz, l.zxy );
 
-			//   x0 = x0 - 0.0 + 0.0 * C.xxx;
-			//   x1 = x0 - i1  + 1.0 * C.xxx;
-			//   x2 = x0 - i2  + 2.0 * C.xxx;
-			//   x3 = x0 - 1.0 + 3.0 * C.xxx;
-			vec3 x1 = x0 - i1 + C.xxx;
-			vec3 x2 = x0 - i2 + C.yyy; // 2.0*C.x = 1/3 = C.y
-			vec3 x3 = x0 - D.yyy;      // -1.0+3.0*C.x = -0.5 = -D.y
+		  //   x0 = x0 - 0.0 + 0.0 * C.xxx;
+		  //   x1 = x0 - i1  + 1.0 * C.xxx;
+		  //   x2 = x0 - i2  + 2.0 * C.xxx;
+		  //   x3 = x0 - 1.0 + 3.0 * C.xxx;
+		  vec3 x1 = x0 - i1 + C.xxx;
+		  vec3 x2 = x0 - i2 + C.yyy; // 2.0*C.x = 1/3 = C.y
+		  vec3 x3 = x0 - D.yyy;      // -1.0+3.0*C.x = -0.5 = -D.y
 
-			// Permutations
-			i = mod289(i);
-			vec4 p = permute( permute( permute(
-			         i.z + vec4(0.0, i1.z, i2.z, 1.0 ))
-			       + i.y + vec4(0.0, i1.y, i2.y, 1.0 ))
-			       + i.x + vec4(0.0, i1.x, i2.x, 1.0 ));
+		// Permutations
+		  i = mod289(i); 
+		  vec4 p = permute( permute( permute( 
+		             i.z + vec4(0.0, i1.z, i2.z, 1.0 ))
+		           + i.y + vec4(0.0, i1.y, i2.y, 1.0 )) 
+		           + i.x + vec4(0.0, i1.x, i2.x, 1.0 ));
 
-			// Gradiusnts: 7x7 points over a square, mapped onto an octahedron.
-			// The ring size 17*17 = 289 is close to a multiple of 49 (49*6 = 294)
-			float n_ = 0.142857142857; // 1.0/7.0
-			vec3  ns = n_ * D.wyz - D.xzx;
+		// Gradients: 7x7 points over a square, mapped onto an octahedron.
+		// The ring size 17*17 = 289 is close to a multiple of 49 (49*6 = 294)
+		  float n_ = 0.142857142857; // 1.0/7.0
+		  vec3  ns = n_ * D.wyz - D.xzx;
 
-			vec4 j = p - 49.0 * floor(p * ns.z * ns.z);  //  mod(p,7*7)
+		  vec4 j = p - 49.0 * floor(p * ns.z * ns.z);  //  mod(p,7*7)
 
-			vec4 x_ = floor(j * ns.z);
-			vec4 y_ = floor(j - 7.0 * x_ );    // mod(j,N)
+		  vec4 x_ = floor(j * ns.z);
+		  vec4 y_ = floor(j - 7.0 * x_ );    // mod(j,N)
 
-			vec4 x = x_ *ns.x + ns.yyyy;
-			vec4 y = y_ *ns.x + ns.yyyy;
-			vec4 h = 1.0 - abs(x) - abs(y);
+		  vec4 x = x_ *ns.x + ns.yyyy;
+		  vec4 y = y_ *ns.x + ns.yyyy;
+		  vec4 h = 1.0 - abs(x) - abs(y);
 
-			vec4 b0 = vec4( x.xy, y.xy );
-			vec4 b1 = vec4( x.zw, y.zw );
+		  vec4 b0 = vec4( x.xy, y.xy );
+		  vec4 b1 = vec4( x.zw, y.zw );
 
-			//vec4 s0 = vec4(lessThan(b0,0.0))*2.0 - 1.0;
-			//vec4 s1 = vec4(lessThan(b1,0.0))*2.0 - 1.0;
-			vec4 s0 = floor(b0)*2.0 + 1.0;
-			vec4 s1 = floor(b1)*2.0 + 1.0;
-			vec4 sh = -step(h, vec4(0.0));
+		  //vec4 s0 = vec4(lessThan(b0,0.0))*2.0 - 1.0;
+		  //vec4 s1 = vec4(lessThan(b1,0.0))*2.0 - 1.0;
+		  vec4 s0 = floor(b0)*2.0 + 1.0;
+		  vec4 s1 = floor(b1)*2.0 + 1.0;
+		  vec4 sh = -step(h, vec4(0.0));
 
-			vec4 a0 = b0.xzyw + s0.xzyw*sh.xxyy ;
-			vec4 a1 = b1.xzyw + s1.xzyw*sh.zzww ;
+		  vec4 a0 = b0.xzyw + s0.xzyw*sh.xxyy ;
+		  vec4 a1 = b1.xzyw + s1.xzyw*sh.zzww ;
 
-			vec3 p0 = vec3(a0.xy,h.x);
-			vec3 p1 = vec3(a0.zw,h.y);
-			vec3 p2 = vec3(a1.xy,h.z);
-			vec3 p3 = vec3(a1.zw,h.w);
+		  vec3 p0 = vec3(a0.xy,h.x);
+		  vec3 p1 = vec3(a0.zw,h.y);
+		  vec3 p2 = vec3(a1.xy,h.z);
+		  vec3 p3 = vec3(a1.zw,h.w);
 
-			//Normalise gradiusnts
-			vec4 norm = taylorInvSqrt(vec4(dot(p0,p0), dot(p1,p1), dot(p2, p2), dot(p3,p3)));
-			p0 *= norm.x;
-			p1 *= norm.y;
-			p2 *= norm.z;
-			p3 *= norm.w;
+		//Normalise gradients
+		  vec4 norm = taylorInvSqrt(vec4(dot(p0,p0), dot(p1,p1), dot(p2, p2), dot(p3,p3)));
+		  p0 *= norm.x;
+		  p1 *= norm.y;
+		  p2 *= norm.z;
+		  p3 *= norm.w;
 
-			// Mix final noise value
-			vec4 m = max(0.6 - vec4(dot(x0,x0), dot(x1,x1), dot(x2,x2), dot(x3,x3)), 0.0);
-			m = m * m;
-			return 42.0 * dot( m*m, vec4( dot(p0,x0), dot(p1,x1),
-			                            dot(p2,x2), dot(p3,x3) ) );
-		}
-
+		// Mix final noise value
+		  vec4 m = max(0.6 - vec4(dot(x0,x0), dot(x1,x1), dot(x2,x2), dot(x3,x3)), 0.0);
+		  m = m * m;
+		  return 42.0 * dot( m*m, vec4( dot(p0,x0), dot(p1,x1), 
+		                                dot(p2,x2), dot(p3,x3) ) );
+		  }
+///////////////////////////////////////////////////////////////////////////////////////////////////
 		/* NOISE ENDS HERE */
-
+///////////////////////////////////////////////////////////////////////////////////////////////////
 		
+		// Uniform
 		uniform float time;
 		uniform float seaDepth;
 
@@ -414,6 +425,7 @@
 		vec4 hiddenMessageColor;
 		vec4 blurryColor;
 
+
 		float surface3( vec3 coord ) {
 
 			float n = 0.0;
@@ -434,7 +446,7 @@
 
 			// Fog color
 			const vec3 fogColor = vec3(0.7, 0.7,0.7);
-			const float FogDensity = 0.05;
+			
 			float dist = 0.0;
 			dist = (gl_FragCoord.z / gl_FragCoord.w);
 
@@ -459,35 +471,35 @@
 		vec4 fog(vec3 pos)
 		{
 			float frequency = 0.2;
+			// Use the perlin noise function Cnoise, in order to retrieve a pseudo random number
+			// (add one and divide by two, in order to make sure the value is in the intervall 0,1)
 			float fogValue = (cnoise(pos * frequency) + 1.0) / 2.0;				// [0,1]
 
 			// Fog color
 			const vec3 fogColor = vec3(0.7, 0.7,0.7);
-			const float FogDensity = 0.05;
+			
+			// distance, dependence to current camera gl_Position
 			float dist = 0.0;
 			dist = (gl_FragCoord.z / gl_FragCoord.w);
 
-			float noisy = surface3(vec3(refractionColor));
-			float check = surface3(vec3(refractionColor));
-			if(noisy < check)
-				noisy = 1.0;
-
 			float fogFactor = 0.0;
-			fogFactor = 1.0 /exp( dist);
+			fogFactor = 1.0 /exp( dist);				// exponential fog
    			fogFactor = clamp( fogFactor, 0.0, 1.0 );
 
-   			vec4 fogColorMix = vec4(0.0,0.0,0.0,0.0); // =  vec4(mix(fogColor, vec3(hiddenMessageColor), 1.0 - fogFactor ), 1.0);
-   								//vec4(1.0,0.0,0.0,0.0);
-   								//vec4(mix(fogColor, vec3(refractionColor), 1.0 - fogFactor ),1.0);
-   			
-   			// fogColorMix = vec4(mix(fogColor, vec3(blurryColor), fogFactor ), 1.0 );
-
-
+   			// The image containing the secret message is painted in black and white. The message is written in darker colors.
+   			// Check if the hiddenMessageColor is < 0.7 (ergo, a secret message)
+   			// 	IF TRUE: Mix the blurry background color with the fogColor 
+   			// 	ELSE: 	 Mix the blurry background color with the hiddenMessageColor and then with the fogColor.
+   			vec4 fogColorMix = vec4(0.0,0.0,0.0,0.0);
    			fogColorMix = (hiddenMessageColor.x < 0.7 || hiddenMessageColor.y < 0.7 || hiddenMessageColor.z < 0.7) 	?
-   			 				( vec4( mix( fogColor, vec3(blurryColor), 1.0 - fogFactor ), 1.0 ) )				: 
-   							( vec4( mix( mix( vec3(blurryColor) , vec3(hiddenMessageColor), 1.0 - fogFactor), fogColor, 1.0 - fogColor ), 1.0 ) );
+   			 				( vec4( mix( fogColor, vec3(blurryColor), fogFactor ), 1.0 ) )				: 
+   							( vec4( mix( mix( vec3(blurryColor) , vec3(hiddenMessageColor), 1.0 - fogFactor), fogColor, fogFactor ), 1.0 ) );
 
+   			// Return vec4, containting (a mixture of) the fogColorMix and blurryColor, depending on how large the valur fogValue is.
 			return (1.0 - fogValue) * fogColorMix + fogValue * blurryColor;
+		
+			// mix(fogColor, lightColor, fogfactor)
+			// mix function fogColor⋅(1−fogFactor) + lightColor⋅fogFactor
 		}
 
 		/* Function noFog() will only display the background cube map since no fog is on it */
