--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<!-- GUI -->
 		<script type="text/javascript">
 		
-		/* 	Funciton that initializes all variables for the gui window
+		/* 	Function that initializes all variables for the gui window
 		* 		When using dat.gui:
 		*		this.variableName = float 		--> field with slider
 		*		this.variableName = false/true 	--> checkbox field
